# cynlr_assignment_1

./: CMakeLists.txt  CMakePresets.json  Design Overview.md  Design_Overview.md  README.md  app.code-workspace  extra.cpp
Arsalan Anwari_SW ARC PS_CynLr SA/: CMakeLists.txt  algorithm.hpp  concepts.hpp  csv_reader.hpp  data_pool.hpp  logging.hpp  main.cpp  scheduler.hpp  settings.hpp  task.hpp  types.hpp
Arsalan Anwari_SW ARC PS_CynLr SA/algorithms/: copy.hpp  filter.hpp  formatting.hpp  random.hpp  threshold.hpp
Arsalan Anwari_SW ARC PS_CynLr SA/shared_resources/: shared_resource_static_spsc_queue.hpp  shared_resource_types.hpp
Arsalan Anwari_SW ARC PS_CynLr SA/tasks/: task_data_generator.hpp  task_filter_threshold.hpp  task_types.hpp
Arsalan Anwari_SW ARC PS_CynLr SA/tasks/task_data_generator/: task_data_generator_base.hpp  task_data_generator_debug.hpp  task_data_generator_testing.hpp
Arsalan Anwari_SW ARC PS_CynLr SA/tasks/task_filter_threshold/: task_filter_threshold_base.hpp  task_filter_threshold_debug.hpp  task_filter_threshold_testing.hpp
app/: CMakeLists.txt  args.hpp  concepts.hpp  csv_reader.hpp  data_pool.hpp  main.cpp  settings.hpp  shared_resource.hpp  task.hpp  types.hpp
app/algorithms/: clamping.hpp  copy.hpp  filter.hpp  formatting.hpp
app/shared_resources/: shared_resource_base.hpp  shared_resource_types.hpp
app/tasks/: task_types.hpp
app/tasks/task_data_generator/: task_data_generator_debug.hpp  task_data_generator_profile.hpp  task_data_generator_testing.hpp
app/tasks/task_filter_threshold/: task_filter_threshold_debug.hpp  task_filter_threshold_profile.hpp  task_filter_threshold_testing.hpp
app/traits/: type_args.hpp  type_format.hpp
examples/: CMakeLists.txt  example_csv_reader.cpp  example_debug.cpp  example_profile.cpp  example_schedular.cpp  example_testing.cpp
res/: test_data.csv
tests/: CMakeLists.txt  test_algorithms.cpp  test_args.cpp  test_csv_reader.cpp  test_data_pool.cpp  test_traits.cpp
